--- a/CSS/Projects/BASIC/first.css
+++ b/CSS/Projects/BASIC/first.css
@@ -15,17 +15,12 @@ html, body{
     background-color: #ededed;
     display: grid;
     grid-template-columns: 25% 25% 50%;
-    grid-template-rows: 30% 50% 20%;
-}
-
-#right{
-    background-color: yellow;
-    grid-column: 3;
-    grid-row: 1/4;
+    grid-template-rows: 26% 56% 18%;
 }
 
 #left-top-left{
-    background-color: orangered;
+    /* background-color: crimson; */
+    padding: 40px;
 }
 
 #square{
@@ -38,30 +33,78 @@ html, body{
 }
 
 
-
-
-
-
-
-
-
-
-
 #left-top-right{
-    background-color: orange;
+    /* background-color: orange; */
+    justify-self: right;
+    padding: 40px;
+    text-align: right;
+}
+
+#left-top-right h4{
+    margin-bottom: 50px;
+    font-size: 20px;
+    font-weight: 500;
+    
+}
+
+#left-top-right h5{
+    font-size: 18px;
+    font-weight: 400;
+    color: rgb(56, 55, 55);
+
 }
 
 
 #left-center{
-    background-color: greenyellow;
+    /* background-color: greenyellow; */
     grid-column: 1/3;
+}
+
+#left-center h1{
+    font-size: 7vw;
+    text-transform: uppercase;
+    line-height: 6.5vw;
+    font-weight: 500;    
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+
+#left-center h1:nth-child(2n){
+   /* background-color: blue; */
+   text-align: center;
+
 }
 
 #left-bottom{
-    background-color: green;
+    /* background-color: green; */
     grid-column: 1/3;
+    padding: 40px;
+    font-weight: 500;
+    color: rgb(56, 55, 55);
+}
+
+#left-bottom p{
+    width: 70%;
+    font-size: 18px;
 }
 
 #right{
-    background-color: pink;
+    /* background-color: yellow; */
+    grid-column: 3;
+    grid-row: 1/4;
+    padding: 40px;
+    padding-right: 150px;
+
+}
+
+#right video{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+#arrow{
+    position: absolute;
+    top: 50%;
+    left: 50%;
 }
