feat: add new Cotton Weave template with responsive design; update styles and structure for improved layout and usability

--- a/CSS/Templates/reset.css
+++ b/CSS/Templates/reset.css
@@ -1,3 +1,4 @@
+/* Reset and Base Styles */
 * {
     margin: 0;
     padding: 0;
@@ -5,19 +6,20 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-html , body{
+html, body {
     height: 100%;
     width: 100%;
 }
 
-#main{
+/* Main Container */
+#main {
     height: 100%;
     width: 100%;
     background-color: #fff;
-
 }
 
-#nav{
+/* Navigation */
+#nav {
     height: 100px;
     width: 100%;
     display: flex;
@@ -27,106 +29,98 @@ html , body{
     padding: 0 30px;
 }
 
-#nav h4{
+#nav h4 {
     font-size: 20px;
     font-weight: 600;
-
 }
 
-#nav i{
+#nav i {
     background-color: black;
-    color: white ;
+    color: white;
     font-size: 20px;
     font-weight: 500;
     padding: 10px;
     border-radius: 50%;
 }
 
-#center{
+/* Center Section */
+#center {
     width: 100%;
     padding: 40px 80px;
 }
 
-#center h1{
+#center h1 {
     font-size: 80px;
     font-weight: 500;
     line-height: 90px;
 }
 
-#center-in{
+#center-in {
     height: 200px;
-    /* background-color: red; */
     width: 100%;
     margin-top: 50px;
     display: flex;
-    justify-content: space-between ;
+    justify-content: space-between;
 }
 
-#center-in p{
+#center-in p {
     font-size: 22px;
     font-weight: 600;
     line-height: 32px;
 }
 
-#right{
-    /* background-color: olive; */
+/* Right Section */
+#right {
     width: 20%;
 }
 
-.elem{
-    /* background-color:greenyellow; */
+/* Elements */
+.elem {
     padding: 20px 0;
     border-top: 2px solid black;
     display: flex;
     align-items: center;
     justify-content: space-between;
-
 }
 
-.elem i{
+.elem i {
     font-size: 25px;
     font-weight: 500;
     opacity: 0;
 }
 
-.elem:hover i{
+.elem:hover i {
     opacity: 1;
 }
 
-.elem:hover{
+.elem:hover {
     background-color: #f8f6f6;
 }
 
-.elem:hover a{
+.elem:hover a {
     text-decoration: underline;
 }
 
-.elem a{
-    color: black; 
+.elem a {
+    color: black;
     text-decoration: none;
     font-weight: 600;
     font-size: 20px;
-
 }
 
-#bottom{
+/* Bottom Section */
+#bottom {
     height: 100%;
     width: 100%;
-    /* background-color: rebeccapurple; */
-    background-image: url(https://images.pexels.com/photos/30166758/pexels-photo-30166758/free-photo-of-elegant-portrait-of-a-woman-in-black-attire.jpeg?auto=compress&cs=tinysrgb&w=600);
     background-size: cover;
-    background-position: 0 8%;
+    background-position: center;
 }
 
-
-
-/* Responsive */
-
+/* Responsive Design */
 @media (max-width: 600px) {
-    /* yet to be done  */
-    #main{
+    #main {
         height: 100%;
         width: 100%;
         background-color: #fff;
     }
-}
+} 
