--- a/CSS/Projects/pro/Dribble/style.css
+++ b/CSS/Projects/pro/Dribble/style.css
@@ -3,41 +3,41 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Gilroy';
-}
-
-html, body {
+  }
+  
+  html, body {
     height: 100%;
     width: 100%;
-}
-
-body{
+  }
+  
+  body{
     background-color: #f8f7f4;
-}
-
-#page1{
+  }
+  
+  #page1{
     width: 100%;
     height: 100vh;
     /* background-color: rebeccapurple; */
-}
-
-#page1 .nav{
-    height: 10%;
+  }
+  
+  #page1 .nav{
+    height: 8vh;
     position: sticky;
-    top: 0%;
+    top: 0;
     /* background-color: olive; */
     display: flex;
     align-items: center;
     justify-content: space-between;
-}
-
-#page1 .nav img{
-    height: 7vh;
-    /* background-color: olive; */
-   
-}
-
-#page1 #nav-part1{
-    width: 30%;
+  }
+  
+  #page1 .nav img{
+    margin-left: 0.3vw;
+    height: 5.5vh;
+    /* background-color: green; */
+  }
+  
+  #page1 #nav-part1{
+    width: 36vw;
     height: 100%;
     /* background-color: lightcoral; */
     display: flex;
@@ -45,15 +45,76 @@ body{
     justify-content: flex-start;
     gap: 2.5vw;
     margin-left: 2vw;
-    
-}
-
-#page1 #nav-part1 h4{
+  }
+  
+  /* New styles for the dropdown container */
+  .dropdown {
+    position: relative;
+  }
+  
+  .dropdown h4 {
+    cursor: pointer;
     font-size: 1.1em;
     font-weight: 500;
-}
+    display: flex;
+    align-items: center;
+  }
+  
+  /* Dropdown menu styles */
+  .dropdown-menu {
+    list-style-type: none;
+    position: absolute;
+    top: 190%;  /* positions the dropdown just below the Explore element */
+    left: 0;
+    min-width: 180px;
+    background-color: #fff;
+    border-radius: 4px;
+    display: none;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.2s ease-in-out, visibility 0.2s ease-in-out;
+    z-index: 100; /* ensures the dropdown appears above other elements */
+  }
 
-#page1 #nav-part2{
+ 
+#borb{
+    border-bottom: 1px solid rgba(0, 0, 0, 0.26);
+}
+  
+  .dropdown-menu li:last-child {
+    border-bottom: none;
+  }
+  
+  .dropdown-menu li a {
+    display: block;
+    padding: 0.7rem 1rem;
+    color: #333;
+    text-decoration: none;
+  }
+  
+  .dropdown-menu li a:hover {
+    background-color: #f2f2f2;
+  }
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-menu {
+    display: block;
+    opacity: 1;
+    visibility: visible;
+  }
+  
+  #page1 #nav-part1 i{
+    font-size: 1.3vw;
+    justify-self: center;
+    align-self: center;
+  }
+  
+  #page1 #nav-part1 h4{
+    font-size: 1.1em;
+    font-weight: 500;
+  }
+  
+  #page1 #nav-part2{
     margin-right: 3vw;
     width: 30%;
     height: 100%;
@@ -63,10 +124,9 @@ body{
     justify-content: flex-end;
     gap: 2.5vw;
     margin-left: 2vw;
-    
-}
-
-#page1 #nav-part2 button{
+  }
+  
+  #page1 #nav-part2 button{
     width: 5vw;
     height: 5vh;
     background-color: black;
@@ -75,9 +135,9 @@ body{
     font-weight: 500;
     color: #f8f7f4;
     border: none;
-}
-
-#page1 #nav-part2 button:nth-child(1){
+  }
+  
+  #page1 #nav-part2 button:nth-child(1){
     width: 5vw;
     height: 5vh;
     background-color: #f8f7f4;
@@ -86,10 +146,9 @@ body{
     font-weight: 400;
     color: black;
     border: none;
-}
-
-
-#page1 .content{
+  }
+  
+  #page1 .content{
     height: calc(100vh - 10%);
     /* background-color: lawngreen; */
     padding-top: 7vw;
@@ -97,27 +156,28 @@ body{
     flex-direction: column;
     align-items: center;
     gap: 1.4vw;
-}
-
-#page1 .content h3{
+  }
+  
+  #page1 .content h3{
     background-color: #f2b0ea;
     padding: 0.7vw 2vw;
     border-radius: 50px;
     color: rgb(78, 77, 77);
-}
-
-#page1 .content h1{
+  }
+  
+  #page1 .content h1{
     font-size: 3.5em;
     font-weight: 600;
     text-align: center;
-}
-
-#page1 .content h4{
+  }
+  
+  #page1 .content h4{
     font-size: 1.3em;
     font-weight: 500;
     text-align: center;
-}
-#page1 .content button{
+  }
+  
+  #page1 .content button{
     padding: 16px 30px;
     background-color: black;
     border-radius: 50px;
@@ -125,4 +185,5 @@ body{
     font-weight: 600;
     color: #f8f7f4;
     border: none;
-}
+  }
+  
